--- a/www-ng/src/index.html
+++ b/www-ng/src/index.html
@@ -9,6 +9,8 @@
 	<meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard">
 	<link rel="shortcut icon" href="assets/img/favicon.png">
 	<title>I/O - CATS</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 
 <!-- BODY options, add following classes to body to change options
