add ios app icon

--- a/www-ng/src/index.html
+++ b/www-ng/src/index.html
@@ -7,10 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="I/O CATS">
 	<meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard">
-	<link rel="shortcut icon" href="assets/img/favicon.png">
+  <link rel="shortcut icon" href="assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="200x200" href="assets/img/favicon.png">
+  <link rel="apple-touch-icon-precomposed" sizes="200x200" href="assets/img/favicon.png">
 	<title>I/O - CATS</title>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
 </head>
 
 <!-- BODY options, add following classes to body to change options
